--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
@@ -19,8 +19,25 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
+}
+
+ext {
+    //app dependencies
+    appCompatVersion = '1.0.2'
+    materialVersion = '1.0.0'
+    constraintLayoutVersion = "1.1.3"
+    vectorDrawableVersion = '1.0.1'
+    roomVersion = '2.1.0'
+    archLifecycleVersion = '2.0.0'
+    ankoVersion = '0.10.8'
+    glideVersion = '4.9.0'
+    androidXTestVersion = '1.1.0'
+    androidXVersion = '1.0.0'
+    espressoVersion = '3.1.0'
+    junitVersion = '4.12'
+    mockitoVersion = '2.23.4'
 }
 
 task clean(type: Delete) {
