--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.40'
     repositories {
         google()
         jcenter()
@@ -31,6 +31,7 @@ ext {
     vectorDrawableVersion = '1.0.1'
     roomVersion = '2.1.0'
     archLifecycleVersion = '2.0.0'
+    androidXLegacySupport = '1.0.0'
     ankoVersion = '0.10.8'
     glideVersion = '4.9.0'
     androidXTestVersion = '1.1.0'
