--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.3.41'
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,7 +19,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-
     }
 }
 
@@ -39,6 +38,9 @@ ext {
     espressoVersion = '3.1.0'
     junitVersion = '4.12'
     mockitoVersion = '2.23.4'
+    retrofitVersion = '2.4.0'
+    rxAndroidVersion = '2.1.0'
+    rxJavaVersion = '2.2.2'
 }
 
 task clean(type: Delete) {
