--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField 'String', "KEY", "\"e2f0a4994f340154ff8b31c65f8f9c5e\""
+        buildConfigField 'String', "API_KEY", "\"e2f0a4994f340154ff8b31c65f8f9c5e\""
         buildConfigField 'String', "BASE_URL", "\"https://api.themoviedb.org\""
+        buildConfigField 'String', "BASE_URL_IMAGE", "\"https://image.tmdb.org/t/p/w500\""
         vectorDrawables.useSupportLibrary = true
     }
+
+    androidExtensions {
+        experimental = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -51,6 +57,7 @@ dependencies {
 
     //Dependencies for Architecture Component
     implementation "androidx.room:room-runtime:$roomVersion"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
